[tool.poetry]
name = "Automation module for Workday"
version = "0.1"
description = "A connector to monitor activity logging"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
sekoia-automation-sdk = "^1.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
requests = "*"
requests-mock = "*"
faker = "^38.2.0"
aioresponses = "^0.7.8"
aiolimiter = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119

[tool.coverage.run]
omit = [
    "tests/*",
    "main.py",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
addopts = '''
  --strict-markers
  --tb=short
  --cov=workday_modules
  --cov-branch
  --cache-clear
  --cov-report=html
  --cov-report=term-missing:skip-covered
  --cov-fail-under=5
  --capture=sys
'''
